@@ -3,7 +3,10 @@ Section: x11
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: David Nusinow <dnusinow@debian.org>, Andres Salomon <dilinger@debian.org>, Julien Cristau <jcristau@debian.org>
-Build-Depends: debhelper (>= 4.0.0)
+Build-Depends:
+ debhelper (>= 4.0.0),
+ automake,
+ xutils-dev (>= 1:7.4+4)
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/pkg-xorg/proto/x11proto-kb
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/proto/x11proto-kb.git
