@@ -36,14 +36,15 @@ build: build-stamp
 build-stamp:
 	dh_testdir
 
-	test -d obj-$(DEB_BUILD_GNU_TYPE) || mkdir obj-$(DEB_BUILD_GNU_TYPE)
+	autoreconf -vfi
+	mkdir -p obj-$(DEB_BUILD_GNU_TYPE)
 	cd obj-$(DEB_BUILD_GNU_TYPE) && \
 	../configure --prefix=/usr --mandir=\$${prefix}/share/man \
 	             --infodir=\$${prefix}/share/info --disable-shared \
 	             $(confflags) CFLAGS="$(CFLAGS)" 
 	cd obj-$(DEB_BUILD_GNU_TYPE) && $(MAKE)
 
-	touch build-stamp
+	>$@
 
 clean:
 	dh_testdir
@@ -55,6 +56,8 @@ clean:
 	rm -f conftest* */conftest*
 	rm -rf autom4te.cache */autom4te.cache
 	rm -rf obj-*
+	rm -f aclocal.m4 configure install-sh missing mkinstalldirs
+	find -name Makefile.in -delete
 
 	dh_clean
 
